--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,25 @@
-<h1>List of all posts<h1>
+<h1>List of all posts</h1>
+
+<div>
+  <%= image_tag(@user.photo, width: 120) %>
+  <h1><%= @user.name %></h1>
+  <p>Number of posts: <%= @user.posts_counter %></p>
+</div>
+
+<% @posts.each do |post| %>
+  <div>
+    <%= link_to user_post_path(@user, post) do %>
+      <h2>Post: <%= post.title %></h2>
+    <% end %>
+    <p><%= post.text %></p>
+    <h2>Comments: <%= post.comments_counter %>, Likes: <%= post.likes_counters %></h2>
+  </div>
+
+  <div>
+    <% post.recent_comments.each do |comment| %>
+      <h3><%= comment.author.name %>: <%= comment.text %></h3>
+    <% end %>
+  </div>
+<% end %>
+
+</div>
