--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
 
   <div>
   <%= link_to user_post_path(@user.id, post.id) do %> 
-  <h3>Post : <%= post.title %></h3>
+  <h3>Post <%= post.id %>: <%= post.title %></h3>
   <% end %>
   <p><%= post.text %></p>
   <h3>Comments: <%= post.comments_counter%>, Likes: <%= post.likes_counters %><h3>
@@ -18,7 +18,7 @@
 
   <div>
   <% post.recent_comments.each do |comment|%>
-    <h3><%= comment.author.name %><%= comment.text %></h3>
+    <h3><%= comment.author.name %> : <%= comment.text %></h3> <br>
     <% end %>
     </div>
   </div>
