--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1>List of all posts</h1>
 
 <main>
-<%= image_tag(user.photo, width: 100) %>
+<%= image_tag('https://example.com/profile.jpg', width: 100) %>
 <h1><%= @user.name %></h1>
 <p >Number of posts: <%= @user.posts_counter%></p>
 </div>
@@ -10,7 +10,7 @@
 
   <div>
   <%= link_to user_post_path(@user.id, post.id) do %> 
-  <h3>Post : <%= post.title %></h3>
+  <h3>Post <%= post.id %>: <%= post.title %></h3>
   <% end %>
   <p><%= post.text %></p>
   <h3>Comments: <%= post.comments_counter%>, Likes: <%= post.likes_counters %><h3>
@@ -18,7 +18,7 @@
 
   <div>
   <% post.recent_comments.each do |comment|%>
-    <h3><%= comment.author.name %><%= comment.text %></h3>
+    <h3><%= comment.author.name %> : <%= comment.text %></h3>
     <% end %>
     </div>
   </div>
