--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 <main>
   <div> 
     <h2><%= @post.title %></h2>
-    <h4>Comments: <%= @post.comments_count %>, Likes: <%= @post.likes_count %></h4>
+    <h4>Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counters %></h4>
     <p><%= @post.text %></p>
     <div>
       <%= form_with(model: @like, url: user_post_likes_path(user_id: @post.author_id, post_id: @post.id), method: :post, local: true) do |form| %>
@@ -20,5 +20,5 @@
   </div>
 </main>
 <button>
-<%= link_to 'Add Comment', new_user_post_comment_path(user_id: @post.author_id, post_id: @post.id) %>
+<%= link_to 'Add Comment', new_user_post_comment_path(user_id: @current_user.id, post_id: @post.id) %>
 </button>
