--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <% @users.each do |user| %>
   <main>
 
-    <div><%= image_tag(user.photo, width: 120) %></div>
+    <div><%= image_tag('https://example.com/profile.jpg', width: 120) %></div>
 
     <%= link_to user_path(user) do %>
       <div><%= user.name %></div>
