--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1>List of all posts</h1>
 
 <main>
-<%= image_tag(user.photo, width: 100) %>
+<%= image_tag('https://cdn.pixabay.com/photo/2015/04/19/08/32/marguerite-729510_1280.jpg', width: 100) %>
 <h1><%= @user.name %></h1>
 <p >Number of posts: <%= @user.posts_counter%></p>
 </div>
@@ -10,7 +10,7 @@
 
   <div>
   <%= link_to user_post_path(@user.id, post.id) do %> 
-  <h3>Post : <%= post.title %></h3>
+  <h2>Post <%= post.id %>: <%= post.title %></h2>
   <% end %>
   <p><%= post.text %></p>
   <h3>Comments: <%= post.comments_counter%>, Likes: <%= post.likes_counters %><h3>
@@ -25,6 +25,5 @@
   
   <% end%>
 
-  <button><%= link_to 'Add new Post', new_user_post_path(@current_user)%></button>
-
+  <button><%= link_to 'Add new Post', new_user_post_path()%></button>
 </main>
