--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <% @users.each do |user| %>
   <main>
 
-    <div><%= image_tag(user.photo, width: 120) %></div>
+    <div><%= image_tag('https://cdn.pixabay.com/photo/2015/04/19/08/32/marguerite-729510_1280.jpg', width: 120) %></div>
 
     <%= link_to user_path(user) do %>
       <div><%= user.name %></div>
