--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,3 +1,4 @@
+<main>
 <%- if controller_name != 'sessions' %>
   <div class='link'><%= link_to "Login", custom_login_path %><br /> </div>
 <% end %>
@@ -23,3 +24,4 @@
     <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
   <% end %>
 <% end %>
+</main>
