--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1>List of all posts</h1>
 
 <main>
-<%= image_tag('https://cdn.pixabay.com/photo/2015/04/19/08/32/marguerite-729510_1280.jpg', width: 100) %>
+<%= image_tag(@user.photo, width: 100) %>
 <h1><%= @user.name %></h1>
 <p >Number of posts: <%= @user.posts_counter%></p>
 </div>
