--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Single user</h1>
 <div>
-<%= image_tag('https://cdn.pixabay.com/photo/2015/04/19/08/32/marguerite-729510_1280.jpg', width: 120) %>
+<%= image_tag(@user.photo, width: 120) %>
 <strong> <%= @user.name %> </strong>
 <h2>Number of posts: <%= @user.posts_counter %></h2>
 <p><strong>Bio:</strong> <%= @user.bio %></p>
