--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,9 @@
 <h1>Welcome to My App</h1>
 <div>
 <% if user_signed_in? %>
-  <p>You are logged in as <%= current_user.name %>.</p>
+<p>You are logged in as <%= current_user.name %></p>
+<p> the current user is <% if current_user.admin? %>an admin <%else%> a user <%end%> </P>
+
   <!-- Add more content for authenticated users -->
   <div><%= link_to 'Go List of users', users_path %> </div>
  <div> <%= link_to 'Go to Profile', user_path(current_user) %></div>
